[package]
name = "discord-logging"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
sqlx = { version =  "0.9.0", features = ["runtime-tokio", "postgres", "uuid"] }
time = { version = "0.3.53", features = ["macros"]}